tests/refi/refi.exp
Error: bound.js:9
  9:     var y : string = x;  // not ok
                          ^ null or undefined. This type is incompatible with
  9:     var y : string = x;  // not ok
                 ^^^^^^ string

Error: bound.js:47
 47:     var y : string = x;  // not ok
                          ^ null or undefined. This type is incompatible with
 47:     var y : string = x;  // not ok
                 ^^^^^^ string

Error: bound.js:53
 53:       var y : string = x;  // not ok
                            ^ null or undefined. This type is incompatible with
 53:       var y : string = x;  // not ok
                   ^^^^^^ string

Error: heap.js:5
  5:     var y : string = x.p;  // not ok
                          ^^^ null or undefined. This type is incompatible with
  5:     var y : string = x.p;  // not ok
                 ^^^^^^ string

Error: heap.js:40
 40:       var y : string = x.p;  // not ok
                            ^^^ null or undefined. This type is incompatible with
 40:       var y : string = x.p;  // not ok
                   ^^^^^^ string

Error: heap.js:48
 48:       var y : string = x.p;  // not ok
                            ^^^ null. This type is incompatible with
 48:       var y : string = x.p;  // not ok
                   ^^^^^^ string

Error: heap.js:55
 55:     var y : string = x.p;  // not ok
                          ^^^ null or undefined. This type is incompatible with
 55:     var y : string = x.p;  // not ok
                 ^^^^^^ string

Error: heap.js:62
 62:       var y : string = x.p;  // not ok
                            ^^^ null or undefined. This type is incompatible with
 62:       var y : string = x.p;  // not ok
                   ^^^^^^ string

Error: heap.js:105
105:       x.y = 123; // error
                 ^^^ number [1] is incompatible with string [2].
  References:
  105:       x.y = 123; // error
                   ^^^ [1]: number
  105:       x.y = 123; // error
             ^^^ [2]: string

Error: heap.js:107
107:     (x.y: string); // error, this got widened to a number
          ^^^ Cannot cast `x.y` to string because number [1] is incompatible with string [2].
  References:
  107:     (x.y: string); // error, this got widened to a number
            ^^^ [1]: number
  107:     (x.y: string); // error, this got widened to a number
                 ^^^^^^ [2]: string

Error: heap.js:125
125:     (x.y : string); // error, could also be boolean
          ^^^ Cannot cast `x.y` to string because boolean [1] is incompatible with string [2].
  References:
  125:     (x.y : string); // error, could also be boolean
            ^^^ [1]: boolean
  125:     (x.y : string); // error, could also be boolean
                  ^^^^^^ [2]: string

Error: heap.js:135
135:     (x.y : boolean); // error, string
          ^^^ Cannot cast `x.y` to boolean because string [1] is incompatible with boolean [2].
  References:
  135:     (x.y : boolean); // error, string
            ^^^ [1]: string
  135:     (x.y : boolean); // error, string
                  ^^^^^^^ [2]: boolean

Error: heap.js:146
146:     (x.y : string); // error
          ^^^ Cannot cast `x.y` to string because null [1] is incompatible with string [2].
  References:
  146:     (x.y : string); // error
            ^^^ [1]: null
  146:     (x.y : string); // error
                  ^^^^^^ [2]: string

Error: heap.js:159
159:     (x.y : string); // error
          ^^^ Cannot cast `x.y` to string because boolean [1] is incompatible with string [2].
  References:
  159:     (x.y : string); // error
            ^^^ [1]: boolean
  159:     (x.y : string); // error
                  ^^^^^^ [2]: string

Error: heap.js:172
172:     (x.y : string); // error
          ^^^ Cannot cast `x.y` to string because boolean [1] is incompatible with string [2].
  References:
  172:     (x.y : string); // error
            ^^^ [1]: boolean
  172:     (x.y : string); // error
                  ^^^^^^ [2]: string

Error: heap.js:172
172:     (x.y : string); // error
          ^^^ Cannot cast `x.y` to string because number [1] is incompatible with string [2].
  References:
  172:     (x.y : string); // error
            ^^^ [1]: number
  172:     (x.y : string); // error
                  ^^^^^^ [2]: string

Error: heap.js:188
188:     (x: 'b'); // error (but only once, string !~> 'b'; 'a' is irrelevant)
          ^ string. Expected string literal `b`
188:     (x: 'b'); // error (but only once, string !~> 'b'; 'a' is irrelevant)
             ^^^ string literal `b`

Error: heap.js:192
192:     if (typeof x.bar === 'string') {} // error, so `x.bar` refinement is empty
                      ^^^ property `bar`. Property not found in
192:     if (typeof x.bar === 'string') {} // error, so `x.bar` refinement is empty
                    ^ mixed

Error: heap.js:193
193:     (x: string & number);
          ^ Cannot cast `x` to intersection type because mixed [1] is incompatible with number [2].
  References:
  193:     (x: string & number);
            ^ [1]: mixed
  193:     (x: string & number);
                        ^^^^^^ [2]: number

Error: heap.js:193
193:     (x: string & number);
          ^ Cannot cast `x` to intersection type because mixed [1] is incompatible with string [2].
  References:
  193:     (x: string & number);
            ^ [1]: mixed
  193:     (x: string & number);
               ^^^^^^ [2]: string

Error: lex.js:6
  6:   (x : string); // error: number ~> string
        ^ Cannot cast `x` to string because number [1] is incompatible with string [2].
  References:
    6:   (x : string); // error: number ~> string
          ^ [1]: number
    6:   (x : string); // error: number ~> string
              ^^^^^^ [2]: string

Error: lex.js:15
 15:   (x : string); // error: number ~> string
        ^ Cannot cast `x` to string because number [1] is incompatible with string [2].
  References:
   15:   (x : string); // error: number ~> string
          ^ [1]: number
   15:   (x : string); // error: number ~> string
              ^^^^^^ [2]: string

Error: lex.js:25
 25:   (x : string); // error: number ~> string
        ^ Cannot cast `x` to string because number [1] is incompatible with string [2].
  References:
   25:   (x : string); // error: number ~> string
          ^ [1]: number
   25:   (x : string); // error: number ~> string
              ^^^^^^ [2]: string

Error: lex.js:35
 35:   (x : string); // error: number ~> string
        ^ Cannot cast `x` to string because number [1] is incompatible with string [2].
  References:
   35:   (x : string); // error: number ~> string
          ^ [1]: number
   35:   (x : string); // error: number ~> string
              ^^^^^^ [2]: string

Error: local.js:5
  5:     var y : string = x;  // not ok
                          ^ null or undefined. This type is incompatible with
  5:     var y : string = x;  // not ok
                 ^^^^^^ string

Error: local.js:47
 47:     var y : string = x;  // not ok
                          ^ null or undefined. This type is incompatible with
 47:     var y : string = x;  // not ok
                 ^^^^^^ string

Error: local.js:54
 54:       var y : string = x;  // not ok
                            ^ null or undefined. This type is incompatible with
 54:       var y : string = x;  // not ok
                   ^^^^^^ string

Error: null_tests.js:150
150:       return super.p;  // not ok
                  ^^^^^^^ null or undefined. This type is incompatible with the expected return type of
147:   ensure103(): string {
                    ^^^^^^ string

Error: switch.js:49
 49:   return foo; // error, possibly uninitialized
              ^^^ possibly uninitialized variable. This type is incompatible with the expected return type of
 27: function exhaustion2(x, y): number {
                                 ^^^^^^ number


Found 29 errors
